# Kabanchiki-forewer

./: Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
ai_model/: generate.py  model.py  nonlinear_topic_clustering_v4_2.py  requirements.txt  serve.py  simple_predict.py  v42_artifacts.pkl  v42_model.onnx
backend/: Cargo.toml
backend/src/: config.rs  main.rs  onnx_predictor.rs  tokenizer.rs
backend/src/api/: mod.rs
backend/src/domain/: mod.rs
backend/src/predict/: mod.rs  onnx_predictor.rs
database/: db.go
handlers/: handlers.go
templates/hello/: index.html  script.js  style.css
